# linux-system-monitor-qt

./: .gitignore  CMakeLists.txt  README.md  system-monitor-qt.desktop
.github/workflows/: build.yml  ci.yml
docs/: readme.md  readme2.md
include/: AnomalyDetector.h  MainWindow.h  SystemInfo.h
src/: AnomalyDetector.cpp  MainWindow.cpp  SystemInfo.cpp
tests/: test_anomaly.cpp
